Oahu/Content/style.css
/* ... */
	#commentform input.form_submit { border-width: 3px; }
	input.form_submit:hover { color: #090; }

/*---:[ universal image classes ]:---*/
img.alignleft, img.left { float: left; }
img.alignright, img.right { float: right; }
img.aligncenter, img.center { display: block; margin-right: auto; margin-left: auto; float: none; clear: both; }
img.alignnone, img.block { display: block; clear: both; }
img.frame { background: #eee; border-style: solid; border-color: #ddd; }
img.stack { clear: none !important; }
img[align="left"] { float: left; clear: left; }
img[align="right"] { float: right; clear: right; }
img[align="middle"] { display: block; margin-right: auto; margin-left: auto; float: none; clear: both; }

/*---:[ image captioning ]:---*/
.wp-caption { border-style: solid; border-color: #ddd; background-color: #eee; text-align: center; font-style: italic; }
	.wp-caption.alignleft { float: left; }
	.wp-caption.alignright { float: right; }
	.wp-caption.aligncenter { margin-right: auto; margin-left: auto; float: none; clear: both; }
	.wp-caption.alignnone { clear: both; }

/*---:[ headlines and bylines ]:---*/
h1, h2, h3, h6 { font-weight: normal; }
h4, h5 { font-weight: bold; }
h5, h6 { text-transform: uppercase; letter-spacing: 1px; }
.format_text h2 { font-weight: bold; }
.format_text h2.top, .format_text h3.top { margin-top: 0 !important; }
.sidebar h3 { font-variant: small-caps; letter-spacing: 2px; }

/*---:[ headline meta data (includes bylines) ]:---*/
.headline_meta { font-style: italic; }
	.headline_meta span, .headline_meta abbr { font-style: normal; text-transform: uppercase; letter-spacing: 1px; }
	.headline_meta a { border-bottom: 1px solid #eee; }

/*---:[ horizontal dropdown nav menu structure ]:---*/
.menu { position: relative; list-style: none; z-index: 50; }
	.menu li { position: relative; float: left; }
		.menu ul { position: absolute; visibility: hidden; list-style: none; z-index: 110; }
			.menu ul li { clear: both; }
		.menu a { display: block; }
	.menu table { position: absolute; left: 0; border-collapse: collapse; }
		.menu table table { top: 0 !important; }
		.menu ul ul { position: absolute; top: 0; }
	.menu li:hover ul, .menu a:hover ul, .menu :hover ul :hover ul, .menu :hover ul :hover ul :hover ul { visibility: visible; }
	.menu :hover ul ul, .menu :hover ul :hover ul ul { visibility: hidden; }

/*---:[ nav menu styles ]:---*/
.menu, .menu a, .menu li ul { border-style: solid; }
	.menu a { text-transform: uppercase; letter-spacing: 2px; }
	.menu .current > a, .menu .current-cat > a, .menu .current-menu-item > a { cursor: text; }
		.menu .rss { float: right; }
		.menu .rss a, .menu .rss a:hover { padding-right: 16px; background: url('/images/icon-rss.gif') 100% 50% no-repeat; border: none; }
		.menu .rss a:hover { text-decoration: underline; }

/*---:[ #header styles ]:---*/
#logo { font-weight: bold; }
#tagline { font-weight: normal; }

/*---:[ content styles ]:---*/
.format_text a { text-decoration: underline; }
.format_text a:hover { text-decoration: none; }
.format_text p.note { background: #f5f5f5; border: 1px solid #ddd; }
.format_text p.alert { background: #ffffa0; border: 1px solid #e5e597; }
.format_text .drop_cap { color: #888; float: left; }
.format_text ul { list-style: square; }
.format_text dt { font-weight: bold; }
	/*---:[ pullquotes ]:---*/
	.format_text blockquote.right, .format_text blockquote.left { border: none; }
	.format_text blockquote.right { float: right; }
	.format_text blockquote.left { float: left; }
		.format_text blockquote.right p, .format_text blockquote.left p { margin: 0; }
	/*---:[ end pullquotes ]:---*/
.format_text .ad { float: right; clear: right; }
.format_text .ad_left { float: left; clear: left; }

/*---:[ after-post elements ]:---*/
.format_text .to_comments { color: #666; clear: both; }
	.format_text .to_comments span { color: #111; line-height: 1em; }
	.format_text .to_comments span.bracket { color: #ccc; }
	.format_text .to_comments a { color: #666; text-decoration: none; }
	.format_text .to_comments a:hover { color: #111; text-decoration: underline; }

/*---:[ tags are not targeted further because these styles need to cascade to teasers as well ]:---*/
.post_tags { color: #666; }
	.post_tags a { text-decoration: none; }
	.post_tags a:hover { text-decoration: underline; }

/*---:[ feature box ]:---*/
#feature_box { background: #eee; border-style: solid; border-color: #ddd; }

/*---:[ home page teasers ]:---*/
.teaser a.teaser_link:hover { text-decoration: underline; }
.teaser .teaser_author { font-style: italic; }
	.teaser .teaser_author .author { font-style: normal; text-transform: uppercase; letter-spacing: 1px; }
.teaser .edit_post { letter-spacing: 1px; }
	.teaser .teaser_author a, .teaser a.teaser_comments, .teaser a.teaser_category, .teaser .edit_post a { text-transform: uppercase; letter-spacing: 1px; color: #888; border-bottom: 1px solid #eee; }
	.teaser .teaser_author a { font-style: normal; }
	.teaser .format_teaser a { text-decoration: underline; }
	.teaser .format_teaser a:hover { text-decoration: none; }

/*---:[ archive information block ]:---*/
#archive_intro { border-style: solid; border-color: #ddd; }

/*---:[ navigation links ]:---*/
.prev_next { text-transform: uppercase; letter-spacing: 2px; color: #666; border-style: solid; border-color: #ddd; clear: both; }
	.prev_next .next { text-align: right; }
	.prev_next .floated { float: left; }
	.prev_next a { text-decoration: none; }
	.prev_next a:hover { text-decoration: underline; }
	.post_nav a { text-transform: none; letter-spacing: normal; }
#comment_nav_2 { border-style: solid; border-color: #ddd; }

/*---:[ multimedia box ]:---*/
.image_box, .custom_box { border-style: solid; border-color: #ddd; }
	#image_box img { background: #fff; border-style: solid; border-color: #bbb; }

/*---:[ sidebar styles ]:---*/
.sidebar a:hover { text-decoration: underline; }
ul.sidebar_list { list-style: none; }
	li.widget { width: 100%; }
/* ... */

